--- a/src/pages/Weather/Weather.scss
+++ b/src/pages/Weather/Weather.scss
@@ -274,7 +274,7 @@
     height: 60%;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
-    background: #97bde3;
+    background: #b3cae0;
     background-image: url("../../documants/weather1.jpg");
     background-size: 3cm;
     background-repeat: no-repeat;
