--- a/src/pages/Weather/Weather.scss
+++ b/src/pages/Weather/Weather.scss
@@ -21,6 +21,8 @@
   &-container {
     display: flex;
     opacity:0.99;
+    width:100% ;
+    max-width: 800px;
   }
 
   &-widget {
@@ -66,6 +68,7 @@
     color: white;
     font-weight: 300;
     font-size: 10em;
+    z-index: 1;
   }
   
   &-summary {
